Adding basis for REST Api
